mdapipkg/objects/Cvent_Survey_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <label>Answer Text_FF</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>Contact Id_FF</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used to map to Financial Force</description>
        <label>Contact_FF</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cvent Survey Details</relationshipLabel>
        <relationshipName>Cvent_Survey_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <label>Event Id_FF</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event_FF</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Cvent Survey Details</relationshipLabel>
        <relationshipName>Cvent_Survey_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Code__c</fullName>
        <label>Question Code_FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Id__c</fullName>
        <label>Question Id_FF</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text_FF</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Id__c</fullName>
        <label>Registration Id_FF</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type_FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cvent Survey Detail</label>
    <nameField>
        <label>Cvent Survey Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cvent Survey Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>